# PyxelSand2

./: .gitignore  README.md  TMP.CANVAS  TMP.json  pyproject.toml  tmp.cnv
.github/workflows/: python-tests-310.yml  python-tests-38.yml  python-tests-39.yml  python-tests.yml
sand_game/: __init__.py  __main__.py  canvas.py  draw_utils.py  game_state.py  gui.py  main_gui.py
sand_game/assets/: res.pyxres
sand_game/gui/: gui.py  main_gui.py
sand_game/particles/: AcidParticle.py  EmberParticle.py  FireParticle.py  FuseParticle.py  Particle.py  SandParticle.py  WallParticle.py  WaterParticle.py  __init__.py
tests/: test_canvas.py  test_sand_game.py
